# google-test-simple

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.cpp  my-math.h
